--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,30 @@
-<div class="container">
-
-    <div class="jumbotron">
-        <h1>EAT DA BURGER!</h1>
-        <br>
-        
-
-    </div>
-</div>
+<h1>burgers!</h1>
+<h2>burgers that are not is_eaten!</h2>
+<ul>
+  {{#each burgers}}
+    {{#unless is_eaten}}
+      {{> burgers/burger-block }}
+    {{/unless}}
+  {{/each}}
+</ul>
+<h2>burgers that are is_eaten!</h2>
+<ul>
+  {{#each burgers}}
+    {{#if is_eaten}}
+      {{> burgers/burger-block}}
+    {{/if}}
+  {{/each}}
+</ul>
+<h2>Add a burger</h2>
+<form class="create-form">
+  <div class="form-group">
+    <label for="ca">burger Name:</label>
+    <input type="text" id="ca" name="name">
+  </div>
+  <div class="form-group">
+    <label for="is_eaten">is_eaten?</label><br>
+    <input type="radio" name="is_eaten" value="1" checked> is_eaten!<br>
+    <input type="radio" name="is_eaten" value="0"> Awake
+  </div>
+  <button type="submit">Add burger</button>
+</form>
