--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eat Da Burger</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery.js"></script>
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
-    <script src="/assets/js/burger.js"></script>
-</head>
-
-<body>
-
-    {{{ body }}}
-
-</body>
-
+	<meta charset="UTF-8">
+		<link rel="stylesheet" href="../../public/assets/style.css"  />
+		<title>MVC With Burgers!</title>
+		<script src="https://code.jquery.com/jquery.js"></script>
+		<script src="../../public/assets/js/burgers.js"></script>
+	</head>
+	<body>
+		{{{ body }}}
+	</body>
 </html>
