--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
+{{!-- <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 		<title>MVC With Cats!</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
@@ -10,4 +12,21 @@
 	<body>
 		{{{ body }}}
 	</body>
+</html> --}}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+
+		<link rel="stylesheet" href="/public/assets/css/style.css" type="text/html"/>
+		<title>Eat Da Burger</title>
+		<script src="https://code.jquery.com/jquery.js"></script>
+		<script src=""></script>
+</head>
+	
+<body>
+	{{{ body }}}
+</body>
 </html>
